deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      serviceAccountName: pod-s3-access
      containers:
        - name: webapp
          image: CONTAINER_IMAGE
          ports:
            - containerPort: 8080
